--- a/手写题/test.html
+++ b/手写题/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <!-- <script src="./柯里化.js"></script> -->
-  <script src="./循环引用test.js"></script>
+  <!-- <script src="./循环引用test.js"></script> -->
+  <script src="./迭代器和生成器.js"></script>
 </body>
 </html>
